Fix image alignment

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -61,10 +61,9 @@ article {
   }
   img {
     margin: 20px;
-
     &.aligncenter {
-      width:100%;
-      clear: both;
+      margin: auto;
+      display: block;
     }
     &.alignleft {
       float:left;
